@@ -5,12 +5,12 @@
 # Build setup for using the frameworks for GLib, Cairo, GTK+ etc.
 #
 
-prompt_prefix = "TEST"
+prompt_prefix = "FW"
 
 # Source and installation locations.
 #
-root = os.path.expanduser("~/test-build")
-checkoutroot = os.path.join(root, "Source")
+root = os.path.expanduser("~/Source/gtk-fw")
+checkoutroot = os.path.join(root, "source")
 prefix = os.path.join(root, "inst")
 
 sdkdir = setup_sdk_10_4()
